--- a/css/component.css
+++ b/css/component.css
@@ -44,6 +44,14 @@ html, body, .container, .header {
 	height: auto;
 }
 
+.btn {
+	border: 0;
+	padding: 10px;
+	border-radius: 10px;
+	background-color: white;
+	font-size: .5em;
+}
+
 .title {
 	z-index: 1000;
 	margin: 0 auto;
